[tool.poetry]
name = "bigraid-log-reader"
version = "0.1.0"
description = ""
authors = ["Mirko Kugelmeier <mirko.kugelmeier@icecube.wisc.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
